--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>27BigGroup</title>
+    <title>uWedding</title>
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Expires" content="-1">
@@ -12,17 +12,22 @@
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <script
         type='text/javascript'>window.ladi_viewport = function (b) { var a = document; b = b ? b : 'innerWidth'; var c = window[b]; var d = c < 768; if (typeof window.ladi_is_desktop == "undefined" || window.ladi_is_desktop == undefined) { window.ladi_is_desktop = !d; } var e = 960; var f = 420; var g = ''; if (!d) { g = "width=" + e + ",user-scalable=no,initial-scale=1.0"; } else { var h = 1; var i = f; if (i != c) { h = c / i; } g = "width=" + i + ",user-scalable=no,initial-scale=" + h + ",minimum-scale=" + h + ",maximum-scale=" + h; } var j = a.getElementById("viewport"); if (!j) { j = a.createElement("meta"); j.id = "viewport"; j.name = "viewport"; a.head.appendChild(j); } j.setAttribute("content", g); }; window.ladi_viewport(); window.ladi_fbq_data = []; window.ladi_fbq = function () { window.ladi_fbq_data.push(arguments); }; window.ladi_ttq_data = []; window.ladi_ttq = function () { window.ladi_ttq_data.push(arguments); };</script>
-    <meta property="og:title" content="27BigGroup" />
+    <meta property="og:title" content="uWedding" />
     <meta property="og:type" content="website" />
     <meta property="og:image"
         content="https://static.ladipage.net/6446a909ce8883001284c7a2/untitled-2-20240414013306-n9pth.jpg">
     <meta property="og:description" content="Thiệp cưới Online (mẫu 7)" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="icon" type="image/x-icon" href="https://www.27biggroup.com/src/log-27bg/logo-27 - v3-height.png" />
-    <link rel="shortcut icon" href="https://www.27biggroup.com/src/log-27bg/logo-27 - v3-height.png" />
-    <link rel="apple-touch-icon" href="https://www.27biggroup.com/src/log-27bg/logo-27 - v3-height.png" />
-    <link rel="apple-touch-icon-precomposed" href="https://www.27biggroup.com/src/log-27bg/logo-27 - v3-height.png" />
-    <meta name="msapplication-TileImage" content="https://www.27biggroup.com/src/log-27bg/logo-27 - v3-height.png" />
+    <link rel="icon" type="image/x-icon"
+        href="https://static.ladipage.net/6446a909ce8883001284c7a2/untitled-2-20240414013306-n9pth.jpg" />
+    <link rel="shortcut icon"
+        href="https://static.ladipage.net/6446a909ce8883001284c7a2/untitled-2-20240414013306-n9pth.jpg" />
+    <link rel="apple-touch-icon"
+        href="https://static.ladipage.net/6446a909ce8883001284c7a2/untitled-2-20240414013306-n9pth.jpg" />
+    <link rel="apple-touch-icon-precomposed"
+        href="https://static.ladipage.net/6446a909ce8883001284c7a2/untitled-2-20240414013306-n9pth.jpg" />
+    <meta name="msapplication-TileImage"
+        content="https://static.ladipage.net/6446a909ce8883001284c7a2/untitled-2-20240414013306-n9pth.jpg" />
     <meta name="revisit-after" content="days" />
     <link rel="dns-prefetch">
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
